--- a/Curriculum/projects.json
+++ b/Curriculum/projects.json
@@ -1,1 +1,1 @@
-
+[{"certifications": "CERTIFICAÇÃO"},{"type": "PROJETO"},{"certification": "Criando seu jogo de memória estilo Genius"},{"link": "https://www.dio.me/certificate/FD681DD6/share"},{"certifications": "CERTIFICAÇÃO"},{"type": "PROJETO"},{"certification": "Integrando um Backend em Node.js com um Frontend em React para um E-commerce"},{"link": "https://www.dio.me/certificate/FFCE3211/share"},{"certifications": "CERTIFICAÇÃO"},{"type": "PROJETO"},{"certification": "Recriando a Interface do Netflix"},{"link": "https://www.dio.me/certificate/559737BC/share"}]
